
  16) A Hungarian translation has been added.

  17) The configure script now prints out a summary of configuration
     options selected at the end of the script run.  For developers,
     "autogen.sh --help" now prints out the configure help if the
     configure script exists.

  18) The Lexmark driver should now print correctly (this is only
     partially tested).

The following bugs have been fixed since Gutenprint 5.0.0-rc3:

1318890 Borderless print scaled wrongly
1379402 BJC-4400: SEGFAULT (photo-ink/color mode)
1417600 escputil clean and nozzle check don't work on new printers
1417603 escputil seg faults if you type ctrl-D to prompt
1422101 Raw output does not work on R800 and related printers
1425951 Bug#351731: Fails in alignment with stylos photo 700
1466678 Epson Stylus Photo R300 fails to eject last page
1467956 Print to CD prints incorrectly with CUPS driver
1447115 Epson driver broken in RC2 (DX4850)
1458059 Lexmark Z52 not working


----------------

B) MAJOR CHANGES BETWEEN GUTENPRINT 5.0.0 RELEASE CANDIDATE 1 AND
   GUTENPRINT 5.0.0 RELEASE CANDIDATE 2:

  1) The Postscript driver now produces more accurate colors.
     Previous releases produced overly pale colors with the default
     settings.

  2) The Postscript driver now accepts red, green, and blue rather
     than cyan, magenta, and yellow options in the GIMP plugin.

  3) The Postscript driver now prints correctly regardless of image
     size.  Previously it corrupted the output if the width of the
     image was not a multiple of 4 pixels.

  4) The driver package now permits specifying all options regardless
     of the setting of the Image Type and Quality options (previously
     it disabled a lot of settings if Quality and/or Image Type were
     not set to Manual Control).  The behavior is now that Quality and
     Image Type provide defaults that may be overridden by the user.
     For example, if the resolution is provided explicitly, it will