@@ -250,10 +250,14 @@ A) MAJOR CHANGES BETWEEN GUTENPRINT 5.0.0 RELEASE CANDIDATE 2 AND
   18) The Lexmark driver should now print correctly (this is only
      partially tested).
 
+  19) Chilean Office, Chilean Double Letter, and Chilean Double Office
+     paper sizes have been added.
+
 The following bugs have been fixed since Gutenprint 5.0.0-rc3:
 
 1318890 Borderless print scaled wrongly
 1379402 BJC-4400: SEGFAULT (photo-ink/color mode)
+1393755 [Feature Request] Chilean paper sizes.
 1417600 escputil clean and nozzle check don't work on new printers
 1417603 escputil seg faults if you type ctrl-D to prompt
 1422101 Raw output does not work on R800 and related printers
